--- a/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan937x_defconfig
+++ b/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan937x_defconfig
@@ -14,6 +14,8 @@ BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(SRC_HOME)/kernels/masternet-next/arch/arm
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="$(SRC_HOME)/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan937x.dts"
 BR2_PACKAGE_BUSYBOX_CONFIG="board/atmel/sama5d3_xplained_ksz9897/busybox.config"
+BR2_PACKAGE_DOSFSTOOLS=y
+BR2_PACKAGE_DOSFSTOOLS_FSCK_FAT=y
 BR2_PACKAGE_E2FSPROGS=y
 BR2_PACKAGE_UBOOT_TOOLS=y
 BR2_PACKAGE_LIBMNL=y
