--- a/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan937x_mmc_defconfig
+++ b/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan937x_mmc_defconfig
@@ -1,9 +1,10 @@
-# Architecture
 BR2_arm=y
 BR2_cortex_a5=y
 BR2_ARM_ENABLE_VFP=y
 BR2_ARM_INSTRUCTIONS_THUMB2=y
 BR2_DL_DIR="../dl"
+BR2_TOOLCHAIN_EXTERNAL=y
+BR2_TOOLCHAIN_EXTERNAL_LINARO_ARM=y
 BR2_ROOTFS_OVERLAY="board/atmel/sama5d3_xplained_ksz9897/rootfs_overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/atmel/sama5d3_xplained_ksz9897/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/atmel/sama5d3_xplained_ksz9897/post-mmc-image.sh"
@@ -17,43 +18,33 @@ BR2_PACKAGE_DOSFSTOOLS=y
 BR2_PACKAGE_DOSFSTOOLS_FSCK_FAT=y
 BR2_PACKAGE_E2FSPROGS=y
 BR2_PACKAGE_UBOOT_TOOLS=y
+BR2_PACKAGE_LIBMNL=y
 BR2_PACKAGE_BRIDGE_UTILS=y
 BR2_PACKAGE_ETHTOOL=y
 BR2_PACKAGE_IPERF3=y
 BR2_PACKAGE_IPROUTE2=y
+BR2_PACKAGE_LINUXPTP=y
 BR2_PACKAGE_NUTTCP=y
 BR2_PACKAGE_TCPDUMP=y
-
-
-# Filesystem
+BR2_PACKAGE_LAN937x_TC=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
-#Added from atmel_sama5d3_xplained_mmc_dev_defconfig
 BR2_TARGET_ROOTFS_EXT2_SIZE="120M"
-
-# Bootloaders
 BR2_TARGET_AT91BOOTSTRAP3=y
-#BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_GIT=y
-#BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_REPO_URL="https://github.com/linux4sam/at91bootstrap.git"
-#BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_REPO_VERSION="v3.8.5"
-#BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_PATCH_DIR="../patches/at91bootstrap3-v3.8.5"
-
-BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_TARBALL=y
-BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_TARBALL_LOCATION="$(call github,linux4sam,at91bootstrap,v3.9.0)/at91bootstrap3-v3.9.0.tar.gz"
+BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_GIT=y
+BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_REPO_URL="https://github.com/linux4sam/at91bootstrap.git"
+BR2_TARGET_AT91BOOTSTRAP3_CUSTOM_REPO_VERSION="v4.0.0"
 BR2_TARGET_AT91BOOTSTRAP3_DEFCONFIG="sama5d3_xplainedsd_uboot"
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_GIT=y
 BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://github.com/linux4sam/u-boot-at91.git"
-BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="linux4sam_5.3"
-BR2_TARGET_UBOOT_PATCH="../patches/uboot-linux4sam_5.3"
-BR2_TARGET_UBOOT_BOARD_DEFCONFIG="sama5d3_xplained_ksz9897_mmc"
+BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="linux4sam-2021.04"
+BR2_TARGET_UBOOT_PATCH="../patches/uboot-linux4sam-2021.04"
+BR2_TARGET_UBOOT_BOARD_DEFCONFIG="sama5d3_xplained_lan937x_mmc"
 BR2_TARGET_UBOOT_ENVIMAGE=y
 BR2_TARGET_UBOOT_ENVIMAGE_SOURCE="board/atmel/sama5d3_xplained_ksz9897/uboot-env.txt"
 BR2_TARGET_UBOOT_ENVIMAGE_SIZE="0x4000"
-# Host packages
-# Needed to generate the SD card image
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_PACKAGE_HOST_MTOOLS=y
-BR2_PACKAGE_CUSTOM_SCRIPTS=y
