--- a/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan937x_mmc_defconfig
+++ b/src/Atmel_SOC_SAMA5D3/buildroot-at91/configs/atmel_sama5d3_xplained_lan937x_mmc_defconfig
@@ -10,7 +10,7 @@ BR2_ROOTFS_POST_BUILD_SCRIPT="board/atmel/sama5d3_xplained_ksz9897/post-build.sh
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/atmel/sama5d3_xplained_ksz9897/post-mmc-image.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
-BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(SRC_HOME)/kernels/masternet-next/arch/arm/configs/sama5_lan937x_dsa_defconfig"
+BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/atmel/sama5d3_xplained_ksz9897/sama5_lan937x_dsa_defconfig"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="$(SRC_HOME)/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan937x.dts"
 BR2_PACKAGE_BUSYBOX_CONFIG="board/atmel/sama5d3_xplained_ksz9897/busybox.config"
@@ -26,7 +26,6 @@ BR2_PACKAGE_IPROUTE2=y
 BR2_PACKAGE_LINUXPTP=y
 BR2_PACKAGE_NUTTCP=y
 BR2_PACKAGE_TCPDUMP=y
-BR2_PACKAGE_LAN937x_TC=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="80M"
