updated the mmc config

--- a/src/Atmel_SOC_SAMA5D3/buildroot_external_lan937x/configs/atmel_sama5d3_xplained_lan937x_mmc_defconfig
+++ b/src/Atmel_SOC_SAMA5D3/buildroot_external_lan937x/configs/atmel_sama5d3_xplained_lan937x_mmc_defconfig
@@ -3,16 +3,17 @@ BR2_cortex_a5=y
 BR2_ARM_ENABLE_VFP=y
 BR2_ARM_INSTRUCTIONS_THUMB2=y
 BR2_DL_DIR="../dl"
+BR2_PACKAGE_OVERRIDE_FILE="$(BR2_EXTERNAL)/local.mk"
 BR2_TOOLCHAIN_EXTERNAL=y
-BR2_ROOTFS_OVERLAY="board/atmel/sama5d3_xplained_lan937x/rootfs_overlay"
-BR2_ROOTFS_POST_BUILD_SCRIPT="board/atmel/sama5d3_xplained_lan937x/post-build.sh"
-BR2_ROOTFS_POST_IMAGE_SCRIPT="board/atmel/sama5d3_xplained_lan937x/post-mmc-image.sh"
+BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL)/board/atmel/sama5d3_xplained_lan937x/rootfs_overlay"
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL)/board/atmel/sama5d3_xplained_lan937x/post-build.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL)/board/atmel/sama5d3_xplained_lan937x/post-mmc-image.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
-BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/atmel/sama5d3_xplained_lan937x/sama5_lan937x_dsa_defconfig"
+BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL)/board/atmel/sama5d3_xplained_lan937x/sama5_lan937x_dsa_defconfig"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="$(SRC_HOME)/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan937x.dts"
-BR2_PACKAGE_BUSYBOX_CONFIG="board/atmel/sama5d3_xplained_lan937x/busybox.config"
+BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL)/board/atmel/sama5d3_xplained_lan937x/busybox.config"
 BR2_PACKAGE_DOSFSTOOLS=y
 BR2_PACKAGE_DOSFSTOOLS_FSCK_FAT=y
 BR2_PACKAGE_E2FSPROGS=y
