--- a/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts
+++ b/src/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan9374_evb.dts
@@ -164,7 +164,7 @@
 				id = <0>;
 				status = "okay";
 
-				lan9374: lan9374@0 {
+				lan9374: switch@0 {
 					compatible = "microchip,lan9374";
 					reg = <0>;
 					spi-max-frequency = <44000000>;
