--- a/src/Atmel_SOC_SAMA5D3/buildroot_external_lan937x/configs/atmel_sama5d3_xplained_lan937x_mmc_defconfig
+++ b/src/Atmel_SOC_SAMA5D3/buildroot_external_lan937x/configs/atmel_sama5d3_xplained_lan937x_mmc_defconfig
@@ -9,6 +9,10 @@ BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_LAN937x_PATH)/board/atmel/sama5d3_xplained_la
 BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_LAN937x_PATH)/board/atmel/sama5d3_xplained_lan937x/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_LAN937x_PATH)/board/atmel/sama5d3_xplained_lan937x/post-mmc-image.sh"
 BR2_LINUX_KERNEL=y
+BR2_LINUX_KERNEL_CUSTOM_VERSION=y
+BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.19-rc2"
+BR2_LINUX_KERNEL_VERSION="5.19-rc2"
+BR2_LINUX_KERNEL_PATCH="$(BR2_EXTERNAL_LAN937x_PATH)/board/atmel/sama5d3_xplained_lan937x/patches/linux/5.19-rc2"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_LAN937x_PATH)/board/atmel/sama5d3_xplained_lan937x/sama5_lan937x_dsa_defconfig"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
