dt-overlay added

--- a/src/Atmel_SOC_SAMA5D3/buildroot_external_lan937x/board/atmel/sama5d3_xplained_lan937x/genimage.cfg
+++ b/src/Atmel_SOC_SAMA5D3/buildroot_external_lan937x/board/atmel/sama5d3_xplained_lan937x/genimage.cfg
@@ -3,8 +3,7 @@
 image boot.vfat {
 	vfat {
 		files = {
-			"zImage",
-			"at91-sama5d3_xplained.dtb",
+			"sama5d3_eds.itb",
 			"boot.bin",
 			"u-boot.bin"
 		}
