--- a/src/Atmel_SOC_SAMA5D3/buildroot_external_lan937x/configs/atmel_sama5d3_xplained_lan937x_defconfig
+++ b/src/Atmel_SOC_SAMA5D3/buildroot_external_lan937x/configs/atmel_sama5d3_xplained_lan937x_defconfig
@@ -16,8 +16,9 @@ BR2_LINUX_KERNEL_PATCH="$(BR2_EXTERNAL_LAN937x_PATH)/board/atmel/sama5d3_xplaine
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_LAN937x_PATH)/board/atmel/sama5d3_xplained_lan937x/sama5_lan937x_dsa_defconfig"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="$(SRC_HOME)/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan937x.dts"
+BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="$(SRC_HOME)/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_eds.dts"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL_LAN937x_PATH)/board/atmel/sama5d3_xplained_lan937x/busybox.config"
+BR2_LINUX_KERNEL_DTB_OVERLAY_SUPPORT=y
 BR2_PACKAGE_STRACE=y
 BR2_PACKAGE_DOSFSTOOLS=y
 BR2_PACKAGE_DOSFSTOOLS_FSCK_FAT=y
@@ -49,3 +50,6 @@ BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="linux4sam-2021.04"
 BR2_TARGET_UBOOT_PATCH="../patches/uboot-linux4sam-2021.04"
 BR2_TARGET_UBOOT_BOARD_DEFCONFIG="sama5d3_xplained_lan937x_nandflash"
 BR2_PACKAGE_HOST_SAM_BA=y
+BR2_PACKAGE_DT_OVERLAY_MCHP=y
+BR2_PACKAGE_DT_OVERLAY_MCHP_PLATFORM="sama5d3_eds"
+BR2_PACKAGE_DT_OVERLAY_MCHP_FIT=y
