--- a/src/Atmel_SOC_SAMA5D3/buildroot_external_lan937x/Config.in
+++ b/src/Atmel_SOC_SAMA5D3/buildroot_external_lan937x/Config.in
@@ -1,1 +1,2 @@
 source "$BR2_EXTERNAL_LAN937x_PATH/package/lan937x_tc/Config.in"
+source "$BR2_EXTERNAL_LAN937x_PATH/package/dt-overlay-mchp/Config.in"
