--- a/src/Atmel_SOC_SAMA5D3/buildroot_external_lan937x/configs/atmel_sama5d3_xplained_lan937x_mmc_defconfig
+++ b/src/Atmel_SOC_SAMA5D3/buildroot_external_lan937x/configs/atmel_sama5d3_xplained_lan937x_mmc_defconfig
@@ -16,8 +16,9 @@ BR2_LINUX_KERNEL_PATCH="$(BR2_EXTERNAL_LAN937x_PATH)/board/atmel/sama5d3_xplaine
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_LAN937x_PATH)/board/atmel/sama5d3_xplained_lan937x/sama5_lan937x_dsa_defconfig"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="$(SRC_HOME)/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_xplained_lan937x.dts"
+BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="$(SRC_HOME)/Atmel_SOC_SAMA5D3/dts/at91-sama5d3_eds.dts"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL_LAN937x_PATH)/board/atmel/sama5d3_xplained_lan937x/busybox.config"
+BR2_LINUX_KERNEL_DTB_OVERLAY_SUPPORT=y
 BR2_PACKAGE_DOSFSTOOLS=y
 BR2_PACKAGE_DOSFSTOOLS_FSCK_FAT=y
 BR2_PACKAGE_E2FSPROGS=y
@@ -52,3 +53,6 @@ BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_ENVIMAGE=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_ENVIMAGE_SOURCE="$(BR2_EXTERNAL_LAN937x_PATH)/board/atmel/sama5d3_xplained_lan937x/uboot-env.txt"
 BR2_PACKAGE_HOST_UBOOT_TOOLS_ENVIMAGE_SIZE="0x4000"
+BR2_PACKAGE_DT_OVERLAY_MCHP=y
+BR2_PACKAGE_DT_OVERLAY_MCHP_PLATFORM="sama5d3_eds"
+BR2_PACKAGE_DT_OVERLAY_MCHP_FIT=y
