--- a/src/Atmel_SOC_SAMA5D3/buildroot_external_lan937x/board/atmel/sama5d3_xplained_lan937x/sama5_lan937x_dsa_defconfig
+++ b/src/Atmel_SOC_SAMA5D3/buildroot_external_lan937x/board/atmel/sama5d3_xplained_lan937x/sama5_lan937x_dsa_defconfig
@@ -118,6 +118,8 @@ CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
 # CONFIG_SCSI_LOWLEVEL is not set
 CONFIG_NETDEVICES=y
+CONFIG_NET_DSA_MICROCHIP_KSZ_COMMON=y
+CONFIG_NET_DSA_MICROCHIP_KSZ_SPI=y
 CONFIG_NET_DSA_MICROCHIP_LAN937X=y
 CONFIG_NET_DSA_MICROCHIP_LAN937X_PTP=y
 CONFIG_NET_DSA_MICROCHIP_LAN937X_TAS=y
